--- a/xjx/Main.Rmd
+++ b/xjx/Main.Rmd
@@ -28,6 +28,8 @@ all training time = model training time + feature extraction time + data preproc
 
 The accuracy and time shown in the table above are from a certain measurement and may not exactly match the results shown in the PDF document.
 
+We extract color features and use the svm classifier as our improved model. Since there is no other results affect our judgment of in-class tests. We predict the final accuracy of in-class test to be 58%
+
 ```{r message=FALSE}
 if(!require("EBImage")){
   source("https://bioconductor.org/biocLite.R")
@@ -117,7 +119,7 @@ In this chunk, we have a set of controls for the evaluation experiments.
 + (T/F) process model of training data
 
 ```{r exp_setup}
-run.baseline = FALSE # run baseline feature, slow!
+run.baseline = TRUE # run baseline feature, slow!
 
 run.dataprocess.fiducial_pt_list = FALSE # save fiducial_pt_list
 run.dataprocess.all_points = FALSE # save all_points, new data after rotate zoom and move
@@ -264,12 +266,12 @@ and the midpoint of the upper lip(52).  For example, the distance of an happy fa
   + Output: an RData file that contains extracted features and corresponding responses
 
 ```{r feature}
-load("../output/all_points.RData")
-source("../xjx_lib/feature.R")
 source("../xjx_lib/feature_baseline.R")
+source("../xjx_lib/feature.R")
+load("../output/all_points.RData")
 
 if(run.baseline){
-    tm_feature_train_baseline <- NA
+  tm_feature_train_baseline <- NA
   if(run.feature.train){
     tm_feature_train_baseline <- system.time(dat_train_baseline <- feature_baseline(fiducial_pt_list, train_idx))
     save(dat_train_baseline, file="../output/feature_train_baseline.RData")
@@ -288,7 +290,7 @@ if(run.feature.train){
   tm_feature_train <- system.time(dat_train <- feature(fiducial_pt_list, train_idx, image_file = "../data/train_set/images/", all_points, colorfeature = FALSE))
   save(dat_train, file="../output/feature_train.RData")
   tm_feature_train_color <- system.time(dat_train_color <- feature(fiducial_pt_list, train_idx, image_file = "../data/train_set/images/", all_points, colorfeature = TRUE))
-  save(dat_train, file="../output/feature_train_color.RData")
+  save(dat_train_color, file="../output/feature_train_color.RData")
 }
 
 tm_feature_test <- NA
@@ -297,7 +299,7 @@ if(run.feature.test){
   tm_feature_test <- system.time(dat_test <- feature(fiducial_pt_list, test_idx, image_file = "../data/train_set/images/", all_points, colorfeature = FALSE))
   save(dat_test, file="../output/feature_test.RData")
   tm_feature_test_color <- system.time(dat_test_color <- feature(fiducial_pt_list, test_idx, image_file = "../data/train_set/images/", all_points, colorfeature = TRUE))
-  save(dat_test, file="../output/feature_test_color.RData")
+  save(dat_test_color, file="../output/feature_test_color.RData")
 }
 
 ```
