--- a/xjx/Main.Rmd
+++ b/xjx/Main.Rmd
@@ -14,6 +14,8 @@ CPU: Intel(R) Core(TM) i7-9700K CPU @ 3.60GHz(3600 MHz)
 GPU: NVIDIA GeForce RTX 2070 SUPER (8192 MB)
 RAM: 16.00 GB (2400 MHz)
 
+Based on the fact that the total training time is the sum of model training time, the feature extraction time, and the data processing time, we have the formula below:
+
 all training time = model training time + feature extraction time + data preprocessing time
 
 |       | test accuracy | model training time | all training time | test prediction time | all prediction time | 
@@ -342,12 +344,13 @@ Call the train model and test model from library.
 ### 1.Baseline model with dist feature in GBM
 
 ```{r}
-#using the baseline features to train the gbm model, 
+#use the baseline features to train the gbm model, get the model called gbm_model_baseline and the time used called tm.gbm.train_baseline
+#save the output model into the output
 if(run.baseline){
   load("../output/feature_train_baseline.RData")
   if(run.train.gbm){
     source("../xjx_lib/train_gbm.R")
-    gbm_result_train_baseline = gbm_train(dat_train_baseline, ntrees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
+    gbm_result_train_baseline = gbm_train(dat_train_baseline, n.trees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
     gbm_model_baseline = gbm_result_train_baseline[[1]]
     tm.gbm.train_baseline = gbm_result_train_baseline[[2]]
     save(gbm_model_baseline, file="../output/gbm_model_baseline.RData")
@@ -358,11 +361,13 @@ if(run.baseline){
 ### 2.Improved feature in GBM
 
 ```{r}
+#use the improved features to train the gbm model, get the model called gbm_model and the time used called tm.gbm.train
+#save the output model into the output
 if(run.train.gbm){
   source("../xjx_lib/train_gbm.R")
   load("../output/feature_train.RData")
   
-  gbm_result_train = gbm_train(dat_train, ntrees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
+  gbm_result_train = gbm_train(dat_train, n.trees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
   gbm_model = gbm_result_train[[1]]
   tm.gbm.train = gbm_result_train[[2]]
   save(gbm_model, file="../output/gbm_model.RData")
@@ -372,6 +377,8 @@ if(run.train.gbm){
 ### 3.Improved feature in SVM
 
 ```{r}
+#use the improved features to train the svm model, get the model called svm_model and the timeused called tm.svm.train
+#save the output model into the output
 if(run.train.svm){
   source("../xjx_lib/train_SVM.R")
   load("../output/feature_train.RData")
@@ -386,6 +393,7 @@ if(run.train.svm){
 ### 4.Improved feature in XGB
 
 ```{r}
+#use cross validation to find the best parameter for the xgb model
 if(run.cv & run.train.xgb){
   source("../xjx_lib/xgb_tune.R")
   load("../output/feature_train.RData")
@@ -412,6 +420,7 @@ if(run.cv & run.train.xgb){
 ```
 
 ```{r}
+#fit the xgb model with the best parameter if we use cross validation and with default if we do not use cross validation, and save the xgb_model into the output folder
 if(run.train.xgb){
   source("../xjx_lib/xgb_train.R")
   load("../output/feature_train.RData")
@@ -422,7 +431,7 @@ if(run.train.xgb){
     xgb_result = xgb_train(dat_train)
   xgb_model = xgb_result[[1]]
   tm.xgb.train = xgb_result[[2]]
-  save(svm_model, file="../output/xgb_model.RData")
+  save(xgb_model, file="../output/xgb_model.RData")
 }
 
 ```
@@ -430,11 +439,12 @@ if(run.train.xgb){
 ### 5.Improved feature with color in GBM
 
 ```{r}
+#use the features with colors to train the gbm model called gbm_model_color, and save the model into output folder
 if(run.train.gbm){
   source("../xjx_lib/train_gbm.R")
   load("../output/feature_train_color.RData")
   
-  gbm_result_train_color = gbm_train(dat_train_color, ntrees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
+  gbm_result_train_color = gbm_train(dat_train_color, n.trees = 200, bag.fraction = 0.8, shrinkage = 0.1, cv.folds = 3)
   gbm_model_color = gbm_result_train_color[[1]]
   tm.gbm.train_color = gbm_result_train_color[[2]]
   save(gbm_model_color, file="../output/gbm_model_color.RData")
@@ -444,6 +454,7 @@ if(run.train.gbm){
 ### 6.Improved feature with color in SVM
 
 ```{r}
+#use the features with colors to train the svm model called svm_model_color and save the model into output folder
 if(run.train.svm){
   source("../xjx_lib/train_SVM.R")
   load("../output/feature_train_color.RData")
@@ -455,9 +466,10 @@ if(run.train.svm){
 }
 ```
 
-### 7.Improved feature in XGB
+### 7.Improved feature with color in XGB
 
 ```{r}
+#We can choose to use cross validation or not. If yes, we will need to run the two chunks below and get the best parameters, if not, we can skip the cross validation steps
 if(run.cv & run.train.xgb){
   source("../xjx_lib/xgb_tune.R")
   load("../output/feature_train_color.RData")
@@ -484,6 +496,7 @@ if(run.cv & run.train.xgb){
 ```
 
 ```{r}
+#use the features with colors to train the xgb model called xgb_model_color and save the model into the output folder
 if(run.train.xgb){
   source("../xjx_lib/xgb_train.R")
   load("../output/feature_train_color.RData")
@@ -500,15 +513,12 @@ if(run.train.xgb){
 ```
 
 
-#### Model selection with cross-validation
-
-* Train the model with the entire training set using the selected model (model parameter) via cross-validation.
-
 ## Step 5: Run test on test images
 
 ### 1.Baseline model with dist feature in GBM
 
 ```{r}
+#prediction of the gbm model with only baseline features
 if(run.baseline){
   source("../xjx_lib/test_gbm.R")
   load("../output/gbm_model_baseline.RData")
@@ -522,6 +532,13 @@ if(run.baseline){
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
+confusionMatrix(factor(gbm_pred_class_baseline), dat_test$emotion_idx)
+```
+
+
+```{r}
+#accuracy of the above gbm model
 if(run.baseline){
   gbm_accuracy_test_baseline = mean(dat_test_baseline$emotion_idx == gbm_pred_class_baseline)
   print(paste0("The accuracy for gbm model baseline is: ", gbm_accuracy_test_baseline))
@@ -531,6 +548,7 @@ if(run.baseline){
 ### 2.Improved feature in GBM
 
 ```{r}
+#prediction of the gbm model with improved features
 source("../xjx_lib/test_gbm.R")
 load("../output/gbm_model.RData")
 load("../output/feature_test.RData")
@@ -542,10 +560,12 @@ gbm_pred_class = apply(gbm_pred, 1, which.max)
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(gbm_pred_class), dat_test$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of gmb model with improved features
 gbm_accuracy_test = mean(dat_test$emotion_idx == gbm_pred_class)
 print(paste0("The accuracy for gbm model is: ", gbm_accuracy_test))
 ```
@@ -553,6 +573,7 @@ print(paste0("The accuracy for gbm model is: ", gbm_accuracy_test))
 ### 3.Improved feature in SVM
 
 ```{r}
+#prediction of the svm model with improved features
 source("../xjx_lib/test_SVM.R")
 load("../output/svm_model.RData")
 load("../output/feature_test.RData")
@@ -563,10 +584,12 @@ tm.svm.test = svm_result_test[[2]]
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(svm_pred_class), dat_test$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of the svm model with improved features
 svm_accuracy_test = mean(dat_test$emotion_idx == svm_pred_class)
 print(paste0("The accuracy for svm model is: ", svm_accuracy_test))
 ```
@@ -574,6 +597,7 @@ print(paste0("The accuracy for svm model is: ", svm_accuracy_test))
 ### 4.Improved feature in XGB
 
 ```{r}
+#prediction of the xgb model with improved features
 source("../xjx_lib/xgb_test.R")
 load("../output/xgb_model.RData")
 load("../output/feature_test.RData")
@@ -585,10 +609,12 @@ xgb_pred_class = apply(xgb_pred, 1, which.max)-1
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(xgb_pred_class), dat_test$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of the xgb model with improved features
 xgb_accuracy_test = mean(dat_test$emotion_idx == xgb_pred_class)
 print(paste0("The accuracy for xgb model is: ", xgb_accuracy_test))
 ```
@@ -596,6 +622,7 @@ print(paste0("The accuracy for xgb model is: ", xgb_accuracy_test))
 ### 5.Improved feature with color in GBM
 
 ```{r}
+#prediction of the gbm model with improved features and colors features
 source("../xjx_lib/test_gbm.R")
 load("../output/gbm_model_color.RData")
 load("../output/feature_test_color.RData")
@@ -607,10 +634,12 @@ gbm_pred_class_color = apply(gbm_pred_color, 1, which.max)
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(gbm_pred_class_color), dat_test_color$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of the gbm model with improved features and color features
 gbm_accuracy_test_color = mean(dat_test_color$emotion_idx == gbm_pred_class_color)
 print(paste0("The accuracy for gbm model is: ", gbm_accuracy_test_color))
 ```
@@ -618,6 +647,7 @@ print(paste0("The accuracy for gbm model is: ", gbm_accuracy_test_color))
 ### 6.Improved feature with color in SVM
 
 ```{r}
+#prediction of the svm model with improved features and colors features
 source("../xjx_lib/test_SVM.R")
 load("../output/svm_model_color.RData")
 load("../output/feature_test_color.RData")
@@ -628,10 +658,12 @@ tm.svm.test_color = svm_result_test_color[[2]]
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(svm_pred_class_color), dat_test_color$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of the gbm model with improved features and color features
 svm_accuracy_test_color = mean(dat_test_color$emotion_idx == svm_pred_class_color)
 print(paste0("The accuracy for svm model is: ", svm_accuracy_test_color))
 ```
@@ -639,6 +671,7 @@ print(paste0("The accuracy for svm model is: ", svm_accuracy_test_color))
 ### 7.Improved feature with color in XGB
 
 ```{r}
+#prediction of the xgb model with improved features and colors features
 source("../xjx_lib/xgb_test.R")
 load("../output/xgb_model_color.RData")
 load("../output/feature_test_color.RData")
@@ -650,10 +683,12 @@ xgb_pred_class_color = apply(xgb_pred_color, 1, which.max)-1
 ```
 
 ```{r}
+#get the confusion matrix of the prediction
 confusionMatrix(factor(xgb_pred_class_color), dat_test_color$emotion_idx)
 ```
 
 ```{r}
+#get the accuracy of the prediction of the gbm model with improved features and color features
 xgb_accuracy_test_color = mean(dat_test_color$emotion_idx == xgb_pred_class_color)
 print(paste0("The accuracy for xgb model is: ", xgb_accuracy_test_color))
 ```
@@ -668,6 +703,7 @@ my_theme = theme_light() +
 ```
 
 ```{r}
+#create a tibble of predict accuracy of each model
 if(run.baseline){
   accuracy_test = tibble(gbm_baseline = gbm_accuracy_test_baseline, 
                          gbm_improved = gbm_accuracy_test, 
@@ -700,6 +736,7 @@ if(run.baseline){
 Prediction performance matters, so does the running times for constructing features and for training the model, especially when the computation resource is limited. 
 
 ```{r running_time}
+#get a tibble of the running time, tm.train for the training and tm.test for the test
 if(run.baseline){
   tm.train = tibble(gbm_baseline = tm.gbm.train_baseline[3], 
                     gbm_improved = tm.gbm.train[3], 
@@ -734,6 +771,9 @@ if(run.baseline){
 ```
 
 ```{r running_time}
+#get a tibble of the total running time which used the formula at the begining of the report
+#for training, total running time is the sum of data manipulation, extraction of features, and trainig
+#for test, the total running time is the sum of data manipulation, extraction of feature, and testing
 if(run.baseline){
   tm.train.with = tibble(gbm_baseline = tm.gbm.train_baseline[3]+tm_feature_train_baseline[3],
                     gbm_improved = tm.gbm.train[3]+tm_feature_train[3]+tm.run.all_points[3]*0.8,
@@ -770,6 +810,7 @@ if(run.baseline){
 #### Train time without feature extraction
 
 ```{r}
+#plot the train time without feature extraction
 tm.train %>% pivot_longer(1:ncol(tm.train)) %>% 
   ggplot(aes(x = name, fill = name)) +
   geom_bar(aes(weight = value)) + 
@@ -783,6 +824,7 @@ tm.train %>% pivot_longer(1:ncol(tm.train)) %>%
 #### Train time with feature extraction
 
 ```{r}
+#plot the train time with feature extraction
 tm.train.with %>% pivot_longer(1:ncol(tm.train.with)) %>% 
   ggplot(aes(x = name, fill = name)) +
   geom_bar(aes(weight = value)) + 
@@ -796,6 +838,7 @@ tm.train.with %>% pivot_longer(1:ncol(tm.train.with)) %>%
 #### Test time without feature extraction
 
 ```{r}
+#plot the test time without feature extraction
 tm.test %>% pivot_longer(1:ncol(tm.test)) %>% 
   ggplot(aes(x = name, fill = name)) +
   geom_bar(aes(weight = value),) + 
@@ -808,6 +851,7 @@ tm.test %>% pivot_longer(1:ncol(tm.test)) %>%
 #### Test time with feature extraction
 
 ```{r}
+#plot the test time with feature extraction
 tm.test.with %>% pivot_longer(1:ncol(tm.test.with)) %>% 
   ggplot(aes(x = name, fill = name)) +
   geom_bar(aes(weight = value),) + 
